Fixed spacing in the nav

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -540,6 +540,10 @@ video {
   margin-left: auto;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
